--- a/Session21_Assignment_Code.ipynb
+++ b/Session21_Assignment_Code.ipynb
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1375,8 +1375,8 @@
       "Women Occupation  : 4\n",
       "Women Occupation  : 2\n",
       " \n",
-      "Probabality of not having an affair  0.7747222125650912\n",
-      "Probabality of having an affair  0.22527778743490873\n"
+      "Probabality of not having an affair  0.7730147818075149\n",
+      "Probabality of having an affair  0.2269852181924851\n"
      ]
     }
    ],
@@ -1397,7 +1397,7 @@
     "print('Women Occupation  :',4) #4th Field\n",
     "print('Women Occupation  :',2) #7th Field\n",
     "print(' ')\n",
-    "predict_affair=model.predict_proba(np.array([[1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 3, 25, 3, 1, 4,16]]))\n",
+    "predict_affair=model2.predict_proba(np.array([[1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 3, 25, 3, 1, 4,16]]))\n",
     "print('Probabality of not having an affair ',predict_affair[0,0])\n",
     "print('Probabality of having an affair ',predict_affair[0,1])"
    ]
